--- a/requirements-tree.txt
+++ b/requirements-tree.txt
@@ -1,16 +1,18 @@
-configparser==3.5.0
+alembic==0.9.3
+  - Mako [required: Any, installed: 1.0.6]
+    - MarkupSafe [required: >=0.9.2, installed: 1.0]
+  - python-dateutil [required: Any, installed: 2.6.1]
+    - six [required: >=1.5, installed: 1.10.0]
+  - python-editor [required: >=0.3, installed: 1.0.3]
+  - SQLAlchemy [required: >=0.7.6, installed: 1.1.11]
 db-psycopg2==0.0.7
   - db [required: Any, installed: 0.1.1]
     - antiorm [required: Any, installed: 1.2.1]
   - psycopg2 [required: Any, installed: 2.7.1]
-enum34==1.1.6
 flake8==3.3.0
   - mccabe [required: >=0.6.0,<0.7.0, installed: 0.6.1]
-  - pycodestyle [required: <2.4.0,>=2.0.0, installed: 2.3.1]
-  - pyflakes [required: <1.6.0,>=1.5.0, installed: 1.5.0]
-funcsigs==1.0.2
-inflect==0.2.5
-ipaddress==1.0.18
+  - pycodestyle [required: >=2.0.0,<2.4.0, installed: 2.3.1]
+  - pyflakes [required: >=1.5.0,<1.6.0, installed: 1.5.0]
 isort==4.2.15
 mock==2.0.0
   - pbr [required: >=0.11, installed: 3.1.1]
@@ -26,99 +28,99 @@ pyramid-basemodel==0.3.6
     - hupper [required: Any, installed: 1.0]
     - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
     - plaster [required: Any, installed: 0.5]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - plaster-pastedeploy [required: Any, installed: 0.3.2]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: >=0.5, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - repoze.lru [required: >=0.4, installed: 0.6]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
     - translationstring [required: >=0.4, installed: 1.3]
     - venusian [required: >=1.0a3, installed: 1.1.0]
     - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
     - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - zope.interface [required: >=3.8.0, installed: 4.4.2]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
   - pyramid-tm [required: Any, installed: 2.2]
     - pyramid [required: >=1.5, installed: 1.9]
       - hupper [required: Any, installed: 1.0]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: Any, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
       - plaster-pastedeploy [required: Any, installed: 0.3.2]
         - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
         - plaster [required: >=0.5, installed: 0.5]
-          - setuptools [required: Any, installed: 36.0.1]
+          - setuptools [required: Any, installed: 36.2.0]
       - repoze.lru [required: >=0.4, installed: 0.6]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
       - translationstring [required: >=0.4, installed: 1.3]
       - venusian [required: >=1.0a3, installed: 1.1.0]
       - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
       - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
       - zope.interface [required: >=3.8.0, installed: 4.4.2]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - transaction [required: >=2.0, installed: 2.1.2]
       - zope.interface [required: Any, installed: 4.4.2]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
   - requests [required: Any, installed: 2.18.1]
     - certifi [required: >=2017.4.17, installed: 2017.4.17]
     - chardet [required: <3.1.0,>=3.0.2, installed: 3.0.4]
-    - idna [required: >=2.5,<2.6, installed: 2.5]
-    - urllib3 [required: >=1.21.1,<1.22, installed: 1.21.1]
+    - idna [required: <2.6,>=2.5, installed: 2.5]
+    - urllib3 [required: <1.22,>=1.21.1, installed: 1.21.1]
   - slugify [required: Any, installed: 0.0.1]
   - SQLAlchemy [required: Any, installed: 1.1.11]
   - zope.interface [required: Any, installed: 4.4.2]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
   - zope.sqlalchemy [required: Any, installed: 0.7.7]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
     - SQLAlchemy [required: >=0.5.1, installed: 1.1.11]
     - transaction [required: Any, installed: 2.1.2]
       - zope.interface [required: Any, installed: 4.4.2]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - zope.interface [required: >=3.6.0, installed: 4.4.2]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
 pyramid-chameleon==0.3
   - Chameleon [required: Any, installed: 3.1]
   - pyramid [required: Any, installed: 1.9]
     - hupper [required: Any, installed: 1.0]
     - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
     - plaster [required: Any, installed: 0.5]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - plaster-pastedeploy [required: Any, installed: 0.3.2]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: >=0.5, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - repoze.lru [required: >=0.4, installed: 0.6]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
     - translationstring [required: >=0.4, installed: 1.3]
     - venusian [required: >=1.0a3, installed: 1.1.0]
     - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
     - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - zope.interface [required: >=3.8.0, installed: 4.4.2]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
 pyramid-debugtoolbar==4.2.1
   - Pygments [required: Any, installed: 2.2.0]
   - pyramid [required: >=1.4, installed: 1.9]
     - hupper [required: Any, installed: 1.0]
     - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
     - plaster [required: Any, installed: 0.5]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - plaster-pastedeploy [required: Any, installed: 0.3.2]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: >=0.5, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - repoze.lru [required: >=0.4, installed: 0.6]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
     - translationstring [required: >=0.4, installed: 1.3]
     - venusian [required: >=1.0a3, installed: 1.1.0]
     - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
     - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - zope.interface [required: >=3.8.0, installed: 4.4.2]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
   - pyramid-mako [required: >=0.3.1, installed: 1.0.2]
     - Mako [required: >=0.8, installed: 1.0.6]
       - MarkupSafe [required: >=0.9.2, installed: 1.0]
@@ -126,49 +128,50 @@ pyramid-debugtoolbar==4.2.1
       - hupper [required: Any, installed: 1.0]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: Any, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
       - plaster-pastedeploy [required: Any, installed: 0.3.2]
         - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
         - plaster [required: >=0.5, installed: 0.5]
-          - setuptools [required: Any, installed: 36.0.1]
+          - setuptools [required: Any, installed: 36.2.0]
       - repoze.lru [required: >=0.4, installed: 0.6]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
       - translationstring [required: >=0.4, installed: 1.3]
       - venusian [required: >=1.0a3, installed: 1.1.0]
       - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
       - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
       - zope.interface [required: >=3.8.0, installed: 4.4.2]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
   - repoze.lru [required: Any, installed: 0.6]
 pyramid-retry==0.5
   - pyramid [required: >=1.9b1, installed: 1.9]
     - hupper [required: Any, installed: 1.0]
     - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
     - plaster [required: Any, installed: 0.5]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - plaster-pastedeploy [required: Any, installed: 0.3.2]
       - PasteDeploy [required: >=1.5.0, installed: 1.5.2]
       - plaster [required: >=0.5, installed: 0.5]
-        - setuptools [required: Any, installed: 36.0.1]
+        - setuptools [required: Any, installed: 36.2.0]
     - repoze.lru [required: >=0.4, installed: 0.6]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
     - translationstring [required: >=0.4, installed: 1.3]
     - venusian [required: >=1.0a3, installed: 1.1.0]
     - WebOb [required: >=1.7.0rc2, installed: 1.7.3]
     - zope.deprecation [required: >=3.5.0, installed: 4.2.0]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
     - zope.interface [required: >=3.8.0, installed: 4.4.2]
-      - setuptools [required: Any, installed: 36.0.1]
+      - setuptools [required: Any, installed: 36.2.0]
   - zope.interface [required: Any, installed: 4.4.2]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
 pytest-cov==2.5.1
   - coverage [required: >=3.7.1, installed: 4.4.1]
   - pytest [required: >=2.6.0, installed: 3.1.3]
     - py [required: >=1.4.33, installed: 1.4.34]
-    - setuptools [required: Any, installed: 36.0.1]
+    - setuptools [required: Any, installed: 36.2.0]
 WebTest==2.0.27
   - beautifulsoup4 [required: Any, installed: 4.6.0]
   - six [required: Any, installed: 1.10.0]
   - waitress [required: >=0.8.5, installed: 1.0.2]
   - WebOb [required: >=1.2, installed: 1.7.3]
+wheel==0.29.0
