--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,22 @@
 #
 #    pip-compile --output-file requirements.txt setup.py requirements-dev.in
 #
+alembic==0.9.3
 antiorm==1.2.1            # via db
 beautifulsoup4==4.6.0     # via webtest
 certifi==2017.4.17        # via requests
 chameleon==3.1            # via pyramid-chameleon
 chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
-configparser==3.5.0       # via flake8
 coverage==4.4.1           # via pytest-cov
 db-psycopg2==0.0.7
 db==0.1.1                 # via db-psycopg2
-enum34==1.1.6             # via flake8
 first==2.0.1              # via pip-tools
 flake8==3.3.0
-funcsigs==1.0.2           # via mock
 hupper==1.0               # via pyramid
 idna==2.5                 # via requests
-inflect==0.2.5            # via pyramid-basemodel
-ipaddress==1.0.18         # via pyramid-debugtoolbar
 isort==4.2.15
-mako==1.0.6               # via pyramid-mako
+mako==1.0.6               # via alembic, pyramid-mako
 markupsafe==1.0           # via mako
 mccabe==0.6.1             # via flake8
 mock==2.0.0
@@ -47,9 +43,11 @@ pyramid-tm==2.2
 pyramid==1.9
 pytest-cov==2.5.1
 pytest==3.1.3
+python-dateutil==2.6.1    # via alembic
+python-editor==1.0.3      # via alembic
 repoze.lru==0.6           # via pyramid, pyramid-debugtoolbar
 requests==2.18.1          # via pyramid-basemodel
-six==1.10.0               # via mock, pip-tools, webtest
+six==1.10.0               # via mock, pip-tools, python-dateutil, webtest
 slugify==0.0.1            # via pyramid-basemodel
 sqlalchemy==1.1.11
 transaction==2.1.2
