--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,16 @@
 [run]
 source = pyramid_test
 omit = pyramid_test/test*
+
+[report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma\: no cover
+
+    # Don't complain if non-runnable code isn't run:
+    if __name__ == '__main__'\:
+    def main\(argv=sys\.argv\)\:
+    def main\(global_config, \*\*settings\)\:
+    def includeme\(config\)\:
+    def pserve\(\)\:
