--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ mako==1.0.6               # via alembic, pyramid-mako
 markupsafe==1.0           # via mako
 mccabe==0.6.1             # via flake8
 mock==2.0.0
+nose==1.3.7
 pastedeploy==1.5.2        # via plaster-pastedeploy, pyramid
 pbr==3.1.1                # via mock
 pip-tools==1.9.0
